feat(url): updates blog url to medium

--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
   <main>
     <h2>What do I do? Well...</h2>
     <ul>
-      <li><a alt-label="Blog" target="_blank" href="http://vitorsnx.vercel.app">I write some <strong>Blog</strong> posts</a></li>
+      <li><a alt-label="Blog" target="_blank" href="https://vitorsnx.medium.com/">I write some <strong>Blog</strong> posts</a></li>
       <li><a alt-label="Github" target="_blank" href="http://github.com/vitorxfs">I push some code to <strong>Github</strong></a></li>
       <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">I *exist* on <strong>LinkedIn</strong></a></li>
       <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">I also complain on <strong>Twitter</strong> sometimes</a></li>
