--- a/es/index.html
+++ b/es/index.html
@@ -27,7 +27,7 @@
   <main>
     <h2>¿Y lo que hago? Bién...</h2>
     <ul>
-      <li><a alt-label="Blog" target="_blank" href="http://vitorsnx.vercel.app">Yo escribo en mi <strong>Blog</strong></a></li>
+      <li><a alt-label="Blog" target="_blank" href="https://vitorsnx.medium.com/">Yo escribo en mi <strong>Blog</strong></a></li>
       <li><a alt-label="Github" target="_blank" href="http://github.com/vitorxfs">Hago commits en el <strong>Github</strong></a></li>
       <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">*Existo* en mí <strong>LinkedIn</strong></a></li>
       <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">Y, por vezes, me quejo en <strong>Twitter</strong>...</a></li>
