fix(a11y): Remove characteres that might confuse screen reader's users

--- a/en/index.html
+++ b/en/index.html
@@ -19,7 +19,7 @@
 
   <title>Vitor Sanches</title>
 </head>
-<body class="">
+<body>
   <header>
     <h1>Hi <span class="wave" aria="wave">👋</span><br />I'm Vitor Sanches</h1>
     <subtitle>I'm a Front-end developer based in Brazil</subtitle>
@@ -29,7 +29,7 @@
     <ul>
       <li><a alt-label="Blog" target="_blank" href="https://vitorsnx.medium.com/">I write some <strong>Blog</strong> posts</a></li>
       <li><a alt-label="Github" target="_blank" href="http://github.com/vitorxfs">I push some code to <strong>Github</strong></a></li>
-      <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">I *exist* on <strong>LinkedIn</strong></a></li>
+      <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">I exist on <strong>LinkedIn</strong></a></li>
       <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">I also complain on <strong>Twitter</strong> sometimes</a></li>
     </ul>
   </main>
