--- a/es/index.html
+++ b/es/index.html
@@ -19,7 +19,7 @@
 
   <title>Vitor Sanches</title>
 </head>
-<body class="">
+<body>
   <header>
     <h1>Hola <span class="wave" aria="wave">👋</span><br />Soy Vitor Sanches</h1>
     <subtitle>Soy desarrollador Front-end en Brasil</subtitle>
@@ -29,8 +29,8 @@
     <ul>
       <li><a alt-label="Blog" target="_blank" href="https://vitorsnx.medium.com/">Yo escribo en mi <strong>Blog</strong></a></li>
       <li><a alt-label="Github" target="_blank" href="http://github.com/vitorxfs">Hago commits en el <strong>Github</strong></a></li>
-      <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">*Existo* en mí <strong>LinkedIn</strong></a></li>
-      <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">Y, por vezes, me quejo en <strong>Twitter</strong>...</a></li>
+      <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">Existo en mí <strong>LinkedIn</strong></a></li>
+      <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">Por vezes, me quejo en <strong>Twitter</strong>...</a></li>
     </ul>
   </main>
   <script type="module" src="../script.js" ></script>
