--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <title>Vitor Sanches</title>
 </head>
-<body class="">
+<body>
   <header>
     <h1>Oi <span class="wave" aria="wave">👋</span><br />Meu nome é Vitor Sanches</h1>
     <subtitle>Sou desenvolvedor Front-end</subtitle>
@@ -30,8 +30,8 @@
     <ul>
       <li><a alt-label="Blog" target="_blank" href="https://vitorsnx.medium.com/">Eu escrevo no meu <strong>Blog</strong></a></li>
       <li><a alt-label="Github" target="_blank" href="http://github.com/vitorxfs">Faço alguns commits no <strong>Github</strong></a></li>
-      <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">*Existo* no <strong>LinkedIn</strong></a></li>
-      <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">E, às vezes, reclamo no <strong>Twitter</strong>...</a></li>
+      <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">Existo no <strong>LinkedIn</strong></a></li>
+      <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">Às vezes, reclamo no <strong>Twitter</strong>...</a></li>
     </ul>
   </main>
   <script type="module" src="./script.js" ></script>
