--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <main>
     <h2>O que eu faço? Bem...</h2>
     <ul>
-      <li><a alt-label="Blog" target="_blank" href="https://vitorsnx.medium.com/">Eu escrevo no meu <strong>Blog</strong></a></li>
+      <li><a alt-label="Youtube" target="_blank" href="https://www.youtube.com/@vitorsnx">Eu faço alguns vídeos no <strong>Youtube</strong></a></li>
+      <li><a alt-label="Blog" target="_blank" href="https://vitorsnx.medium.com/">Escrevo no meu <strong>Blog</strong></a></li>
       <li><a alt-label="Github" target="_blank" href="http://github.com/vitorxfs">Faço alguns commits no <strong>Github</strong></a></li>
       <li><a alt-label="LinkedIn" target="_blank" href="http://linkedin.com/in/vitorsanches">Existo no <strong>LinkedIn</strong></a></li>
       <li><a alt-label="Twitter" target="_blank" href="http://twitter.com/vitorsnx">Às vezes, reclamo no <strong>Twitter</strong>...</a></li>
